rust/macros/tests/invalid/target/debug/deps/only_arrow_rs-99c29ba75da7eb4c.d
/home/jai/Rust/Exercism/rust/macros/tests/invalid/target/debug/deps/only_arrow_rs-99c29ba75da7eb4c.rmeta: only-arrow.rs

/home/jai/Rust/Exercism/rust/macros/tests/invalid/target/debug/deps/only_arrow_rs-99c29ba75da7eb4c.d: only-arrow.rs

only-arrow.rs:
